# College-Football-Swiss-Scheduling

./: CFB - cfb_teams.csv  cfb_distance_graph.pickle  cfb_teams_df.pickle  main.py  pyproject.toml  round10_pairings.csv  round10_standings.csv  round11_pairings.csv  round11_standings.csv  round12_pairings.csv  round12_standings.csv  round1_pairings.csv  round1_standings.csv  round2_pairings.csv  round2_standings.csv  round3_pairings.csv  round3_standings.csv  round4_pairings.csv  round4_standings.csv  round5_pairings.csv  round5_standings.csv  round6_pairings.csv  round6_standings.csv  round7_pairings.csv  round7_standings.csv  round8_pairings.csv  round8_standings.csv  round9_pairings.csv  round9_standings.csv  swiss.py  team.py  tournament.py
